# tirajira

./: .cz.toml  .gitignore  AGENTS.md  LICENSE  README.md  cliff.toml  pyproject.toml  requirements-dev.txt  requirements.txt  test.json
.github/workflows/: ci.yml  release.yml
docs/: examples.md  support.md
docs/en/: commands.md  configuration.md  faq.md  fields.md  file_formats.md  index.md  rate_limiting.md  support.md  troubleshooting.md
docs/ru/: README.md  commands.md  configuration.md  contributing.md  examples.md  faq.md  fields.md  file_formats.md  index.md  installation.md  rate_limiting.md  reports.md  support.md  troubleshooting.md
examples/: example_tasks.csv  example_tasks.json  example_tasks.xlsx  example_tasks.xml  example_tasks.yaml
src/tirajira/: __init__.py  batch_processor.py  exceptions.py  jira_client.py  logger.py  main.py  task_creator.py
src/tirajira/auth/: auth_factory.py  auth_strategy.py  jira_authenticator.py
src/tirajira/commands/: __init__.py  argument_parser.py  base.py  cli.py  exception_handler.py  extract_failed.py  help_manager.py  import_cmd.py  resume.py  utils.py
src/tirajira/core/: concurrency_manager.py  issue_link.py  rate_limit_controller.py  rate_limiter.py
src/tirajira/file_loaders/: __init__.py  base.py  base_loader.py  csv_loader.py  excel_loader.py  exception_handler.py  factory.py  json_loader.py  xml_loader.py  yaml_loader.py
src/tirajira/integrations/: jira_client.py  jira_client_interface.py
src/tirajira/processing/: report_generator.py  task_creator.py  task_processor.py
src/tirajira/report_writers/: __init__.py  base.py  csv_writer.py  excel_writer.py  factory.py  json_writer.py  xml_writer.py  yaml_writer.py
src/tirajira/utils/: __init__.py  dot_notation_utils.py  flatten_utils.py  link_validator.py  path_validation.py
tests/: conftest.py
tests/tirajira/: integration_test.py  test_batch_processor.py  test_data.py  test_jira_client.py  test_logger.py  test_main.py  test_task_creator.py
tests/tirajira/auth/: test_auth_factory.py  test_auth_strategy.py  test_jira_authenticator.py
tests/tirajira/commands/: test_argument_parser.py  test_base.py  test_cli.py  test_extract_failed.py  test_help_manager.py  test_import_cmd.py  test_resume.py  test_utils.py
tests/tirajira/core/: test_concurrency_manager.py  test_issue_link.py  test_rate_limit_controller.py  test_rate_limiter.py
tests/tirajira/file_loaders/: __init__.py  test_all_loaders.py  test_base_loader.py  test_csv_loader.py  test_excel_loader.py  test_exception_handler.py  test_factory.py  test_json_loader.py  test_linking.py  test_xml_loader.py  test_yaml_loader.py
tests/tirajira/file_loaders/base/: test_file_loader.py
tests/tirajira/integrations/: test_jira_client.py  test_jira_client_interface.py
tests/tirajira/processing/: test_report_generator.py  test_task_creator.py  test_task_processor.py
tests/tirajira/report_writers/: __init__.py  test_csv_writer.py  test_excel_writer.py  test_factory.py  test_json_writer.py  test_report_writers.py  test_xml_writer.py  test_yaml_writer.py
tests/tirajira/report_writers/base/: __init__.py  test_report_writer.py
tests/tirajira/utils/: test_dot_notation_utils.py  test_link_validator.py  test_utilities.py
