[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "tirajira"
version = "0.0.0"
description = "TiraJira - инструмент для автоматизации массового создания задач в Jira с поддержкой форматов JSON, YAML, CSV, Excel и XML"
authors = ["Artem Vasilev <artempunkrocker@gmail.com>"]
maintainers = ["Artem Vasilev <artempunkrocker@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/artempunkrocker/tirajira"
repository = "https://github.com/artempunkrocker/tirajira"
documentation = "https://github.com/artempunkrocker/tirajira"
keywords = ["jira", "automation", "task-creation", "json", "yaml", "csv", "excel", "xml"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
jira = "^3.0.0"
python-dotenv = "^1.0.0"
PyYAML = "^6.0.0"
tqdm = "^4.65.0"
openpyxl = "^3.1.0"
flatdict = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
coverage = "^7.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.8.0"
commitizen = {version = "^3.0.0", python = "^3.8"}
git-cliff = "^2.12.0"

[tool.poetry.scripts]
tirajira = "tirajira.main:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?$"
latest-tag = true

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "C",   # flake8-comprehensions
  "B",   # flake8-bugbear
]

[tool.pytest.ini_options]
addopts = "--verbose -s --cov=tirajira --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = [
    "src/tirajira",
]

omit = [
    "tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

fail_under = 90

[tool.coverage.html]
directory = "htmlcov"