[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "tirajira"
version = "1.1.1"
description = "TiraJira - tool for automating mass task creation in Jira with support for JSON, YAML, CSV, Excel and XML formats"
authors = [{name = "Artem Vasilev", email = "artempunkrocker@gmail.com"}]
license = "Apache-2.0"
readme = "README.md"
keywords = ["jira", "automation", "task-creation", "json", "yaml", "csv", "excel", "xml"]
requires-python = ">=3.8"
dynamic = ["classifiers", "dependencies"]

[project.urls]
homepage = "https://github.com/artempunkrocker/tirajira"
repository = "https://github.com/artempunkrocker/tirajira"
documentation = "https://github.com/artempunkrocker/tirajira"

[tool.poetry]
name = "tirajira"
version = "0.0.0"
description = "TiraJira - tool for automating mass task creation in Jira with support for JSON, YAML, CSV, Excel and XML formats"
authors = ["Artem Vasilev <artempunkrocker@gmail.com>"]



[tool.poetry.dependencies]
python = "^3.8"
jira = "^3.0.0"
python-dotenv = "^1.0.0"
PyYAML = "^6.0.0"
tqdm = "^4.65.0"
openpyxl = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
coverage = "^7.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.8.0"
python-semantic-release = "^10.5.3"

[project.scripts]
tirajira = "tirajira.main:main"


[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "C",   # flake8-comprehensions
  "B",   # flake8-bugbear
]

[tool.pytest.ini_options]
addopts = "--verbose -s --cov=tirajira --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = [
    "src/tirajira",
]

omit = [
    "tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

fail_under = 90

[tool.coverage.html]
directory = "htmlcov"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/tirajira/__init__.py:__version__"]
build_command = ""
changelog_file = "CHANGELOG.md"
tag_format = "v{version}"
upload_to_vcs_release = true