[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "tirajira"
version = "1.1.4"
description = "TiraJira - tool for automating mass task creation in Jira with support for JSON, YAML, CSV, Excel and XML formats"
authors = [{name = "Artem Vasilev", email = "artempunkrocker@gmail.com"}]
license = "Apache-2.0"
readme = "README.md"
keywords = ["jira", "automation", "task-creation", "json", "yaml", "csv", "excel", "xml"]
requires-python = ">=3.10"
dynamic = ["classifiers", "dependencies"]

[project.urls]
homepage = "https://github.com/artempunkrocker/tirajira"
repository = "https://github.com/artempunkrocker/tirajira"
documentation = "https://github.com/artempunkrocker/tirajira"

[tool.poetry]
name = "tirajira"
version = "0.0.0"
description = "TiraJira - tool for automating mass task creation in Jira with support for JSON, YAML, CSV, Excel and XML formats"
authors = ["Artem Vasilev <artempunkrocker@gmail.com>"]



[tool.poetry.dependencies]
python = "^3.10"
jira = "^3.10.5"
python-dotenv = "^1.2.2"
PyYAML = "^6.0.3"
tqdm = "^4.67.3"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.13.5"
pytest-cov = "^6.1.0"
ruff = "^0.14.13"
python-semantic-release = "^10.5.3"

[project.scripts]
tirajira = "tirajira.main:main"


[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "C",   # flake8-comprehensions
  "B",   # flake8-bugbear
]

[tool.pytest.ini_options]
addopts = "--verbose -s --cov=tirajira --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = [
    "src/tirajira",
]

omit = [
    "tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

fail_under = 90

[tool.coverage.html]
directory = "htmlcov"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/tirajira/__init__.py:__version__"]
build_command = ""
changelog_file = "CHANGELOG.md"
tag_format = "v{version}"
upload_to_vcs_release = true